# kraken-sdk-rust

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yaml
kraken_cli/: Cargo.toml  README.md
kraken_cli/src/: account.rs  lib.rs  main.rs  market.rs  util.rs
kraken_cli/src/account/: balance.rs  orders.rs
kraken_cli/src/account/orders/: cancel.rs  create.rs  list.rs
kraken_cli/src/market/: ohlc.rs  ticker.rs
kraken_client/: Cargo.toml  README.md
kraken_client/src/: api.rs  client.rs
kraken_client/src/api/: add_order.rs  get_closed_orders.rs  get_open_orders.rs  get_stakeable_assets.rs  get_system_status.rs  get_tickers.rs  get_trades_history.rs  stake_asset.rs  unstake_asset.rs
kraken_client/src/types/: asset_name.rs  order.rs  pair_name.rs
kraken_client_rest/: Cargo.toml  README.md
kraken_client_rest/src/api/: get_asset_pairs.rs  get_deposit_methods.rs  get_open_positions.rs  get_server_time.rs
kraken_client_ws/: Cargo.toml  README.md
kraken_client_ws/examples/: ticker.rs
kraken_client_ws/src/: types.rs
kraken_client_ws/src/api/: cancel_all_orders_after.rs  cancel_order.rs  subscribe_executions.rs
kraken_futures_client_rest/: Cargo.toml
kraken_futures_client_rest/src/: api.rs
kraken_futures_client_ws/: Cargo.toml  README.md
kraken_futures_rest_client/: Cargo.toml  README.md
kraken_futures_rest_client/src/: client.rs  error.rs
kraken_futures_ws_client/: Cargo.toml
kraken_futures_ws_client/src/: lib.rs
kraken_rest_client/: Cargo.toml  README.md
kraken_rest_client/src/: api.rs  client.rs  error.rs  lib.rs  sign.rs  types.rs
kraken_rest_client/src/api/: add_order.rs  cancel_all_orders.rs  cancel_order.rs  cancel_order_batch.rs  get_closed_orders.rs  get_deposit_status.rs  get_ledgers.rs  get_ohlc_data.rs  get_open_orders.rs  get_recent_trades.rs  get_system_status.rs  get_tickers.rs  get_trade_balance.rs  get_trades_history.rs  get_web_sockets_token.rs  get_withdrawal_addresses.rs  get_withdrawal_methods.rs  query_orders_info.rs  stake_asset.rs  unstake_asset.rs  withdraw.rs
kraken_rest_client/src/types/: order.rs
kraken_sdk_futures_rest/: Cargo.toml  README.md
kraken_sdk_futures_rest/src/: api.rs  client.rs  error.rs  lib.rs
kraken_sdk_futures_rest/src/api/: get_instruments.rs  get_ohlc.rs
kraken_sdk_futures_ws/: Cargo.toml  README.md
kraken_sdk_rest/: Cargo.toml  README.md
kraken_sdk_rest/src/: api.rs  client.rs  error.rs  lib.rs  serde.rs  types.rs
kraken_sdk_rest/src/api/: add_order.rs  cancel_order.rs  get_account_balance.rs  get_asset_pairs.rs  get_assets.rs  get_closed_orders.rs  get_deposit_addresses.rs  get_deposit_methods.rs  get_deposit_status.rs  get_ledgers.rs  get_ohlc_data.rs  get_open_orders.rs  get_open_positions.rs  get_order_book.rs  get_server_time.rs  get_stakeable_assets.rs  get_system_status.rs  get_tickers.rs  get_trade_volume.rs  get_trades_history.rs  get_web_sockets_token.rs  query_orders_info.rs  stake_asset.rs  unstake_asset.rs
kraken_sdk_rest/src/types/: order.rs  pair_name.rs
kraken_sdk_ws/: Cargo.toml  README.md
kraken_sdk_ws/examples/: ticker.rs
kraken_sdk_ws/src/: api.rs  client.rs  error.rs  lib.rs  messages.rs  socket.rs  types.rs
kraken_sdk_ws/src/api/: add_order.rs  batch_cancel.rs  cancel_all_orders.rs  cancel_all_orders_after.rs  cancel_order.rs  status.rs  subscribe.rs  subscribe_executions.rs  subscribe_instrument.rs  subscribe_ohlc.rs  subscribe_ticker.rs  subscribe_trade.rs
kraken_ws_client/: Cargo.toml  README.md
kraken_ws_client/examples/: book.rs  ticker.rs
kraken_ws_client/src/: api.rs  client.rs  error.rs  lib.rs  types.rs  util.rs
kraken_ws_client/src/api/: add_order.rs  batch_cancel.rs  cancel_all_orders.rs  cancel_all_orders_after.rs  cancel_order.rs  edit_order.rs  heartbeat.rs  status.rs  subscribe_book.rs  subscribe_executions.rs  subscribe_instrument.rs  subscribe_ohlc.rs  subscribe_ticker.rs  subscribe_trade.rs
src/: client.rs  lib.rs  sign.rs  types.rs
src/api/: add_order.rs  cancel_order.rs  get_account_balance.rs  get_asset_info.rs  get_asset_pairs.rs  get_assets.rs  get_closed_orders.rs  get_ohlc_data.rs  get_open_orders.rs  get_order_book.rs  get_server_time.rs  get_system_status.rs  get_ticker_info.rs  get_tickers.rs  get_trade_balance.rs  get_trades_history.rs  mod.rs
src/types/: asset.rs  asset_name.rs  mod.rs  order.rs  pair.rs  pair_name.rs
