[package]
name = "kraken_client"
description = "A strongly-typed client for the Kraken REST API"
version = "0.4.0"
repository = "https://github.com/gmosx/rust_kraken_client"
keywords = ["api", "client", "rest", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
sha2 = "*"
hmac = "*"
base64 = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }