[workspace]

resolver = "2"

members = [
    "kraken_rest_client",
    "kraken_ws_client",
    "kraken_futures_rest_client",
    "kraken_futures_ws_client",
    "kraken_cli",
]

[workspace.package]
version = "0.27.0"
edition = "2021"
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1"
serde_json = "1"
