[package]
name = "kraken_cli"
description = "A CLI for the Kraken Exchange"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/gmosx/kraken-sdk-rust/tree/main/kraken_cli"
keywords = ["kraken", "cli"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]

[[bin]]
name = "kraken"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
kraken_rest_client = { path = "../kraken_rest_client", version = "0.26" }
