[package]
name = "kraken_client"
description = "A strongly-typed client for the Kraken REST API"
version = "0.14.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/rust_kraken_client"
keywords = ["api", "client", "rest", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
hmac = "0.10"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "1.1"