[package]
name = "kraken_futures_rest_client"
description = "A strongly-typed client for the Kraken Futures REST API"
version = "0.25.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/kraken-sdk-rust/tree/main/kraken_sdk_futures_rest"
keywords = ["kraken", "api", "client", "rest", "futures"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"
chrono = "0.4"
