[package]
name = "kraken_rest_client"
description = "A strongly-typed client for the Kraken REST API"
version = "0.24.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/kraken-sdk-rust/tree/main/kraken_sdk_rest"
keywords = ["kraken", "api", "client", "rest", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crypto-common = "0.1"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"
