[package]
name = "kraken_rest_client"
description = "A strongly-typed client for the Kraken REST API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/gmosx/kraken-sdk-rust/tree/main/kraken_sdk_rest"
keywords = ["kraken", "api", "client", "rest", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]

[dependencies]
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crypto-common = "0.1"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"
