[package]
name = "kraken_sdk_futures_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.9"
hmac = "0.10"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "1.1"