[package]
name = "kraken_sdk_futures_ws"
description = "A strongly-typed client for the Kraken Futures WebSocket API"
version = "0.18.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/kraken_sdk_rust/tree/main/kraken_sdk_futures_ws"
keywords = ["kraken", "api", "client", "websocket", "futures"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
