[package]
name = "kraken_sdk_rest"
description = "A strongly-typed client for the Kraken REST API"
version = "0.19.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/kraken_sdk_rust/tree/main/kraken_sdk_rest"
keywords = ["kraken", "api", "client", "rest", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
hmac = "0.10"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "1.1"
