[package]
name = "kraken_sdk_ws"
description = "A strongly-typed SDK for the Kraken WebSocket API"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/rust_kraken_sdk/tree/main/kraken_sdk_ws"
keywords = ["kraken", "api", "client", "websocket", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"