[package]
name = "kraken_sdk_ws"
description = "A strongly-typed client for the Kraken WebSocket API"
version = "0.18.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/kraken_sdk_rust/tree/main/kraken_sdk_ws"
keywords = ["kraken", "api", "client", "websocket", "trading"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
log = "0.4"
url = "2"
env_logger = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
rust_decimal = "1"
rust_decimal_macros = "1"
