[package]
name = "kraken_ws_client"
description = "A strongly-typed client for the Kraken WebSocket API"
version = "0.22.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/kraken-sdk-rust/tree/main/kraken_client_ws"
keywords = ["kraken", "api", "client", "websocket", "trading"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
rust_decimal = "1"
rust_decimal_macros = "1"
async-stream = "0.3"
rand = "0.8"
